--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
     </header>
     <main>
         <h2>게임 리스트</h2>
-        <ul>
-            <li><a href="games/game1.html">🎮 공 튀기기 게임</a></li>
-            <li><a href="games/game2.html">미니게임 2</a></li>
-        </ul>
+       <ul>
+    <li><a href="games/game1.html">🎮 공 튀기기 게임</a></li>
+    <li><a href="games/game2.html">🧱 벽돌 깨기 게임</a></li>
+</ul>
+
     </main>
 </body>
 </html>
