--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
        <ul>
     <li><a href="games/game1.html">🎮 공 튀기기 게임</a></li>
     <li><a href="games/game2.html">🧱 벽돌 깨기 게임</a></li>
+    <li><a href="games/dodge_game.html">⚡ 피하는 게임</a></li>
 </ul>
 
     </main>
