--- a/games/dodge_game.html
+++ b/games/dodge_game.html
@@ -40,6 +40,8 @@
 <body>
     <h1>⚡ 피하는 게임 ⚡ - <small>키보드로 움직여서 피하는 게임!</small></h1>
 
+    <button id="startButton" onclick="startGame()">게임 시작</button>
+
     <div id="gameContainer">
         <canvas id="gameCanvas" width="400" height="500"></canvas>
         <div id="scoreBoard">
