--- a/games/game2.html
+++ b/games/game2.html
@@ -38,9 +38,10 @@
     </style>
 </head>
 <body>
-    <h1>🧱 벽돌 깨기 게임 🧱 - <small>공을 튕겨 벽돌을 모두 없애세요!</small></h1>
+    <h1>🧱 벽돌 깨기 게임 🧱 - <small>방향키로 패들을 움직여 벽돌을 깨세요!</small></h1>
 
-    <button onclick="startGame()">게임 시작</button>
+    <!-- 🛑 게임 시작 버튼 추가 -->
+    <button id="startButton" onclick="startGame()">게임 시작</button>
 
     <div id="gameContainer">
         <canvas id="gameCanvas" width="480" height="320"></canvas>
